--- a/FinalProject/app/src/main/AndroidManifest.xml
+++ b/FinalProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject">
-        <activity android:name=".MainActivity" android:screenOrientation="portrait" >
+        <activity android:name=".fragments.MainActivity" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
