--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
-
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 apply plugin: 'kotlin-android'
 
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-
+    implementation "androidx.datastore:datastore-preferences:1.1.0-dev01"
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -42,15 +42,16 @@ dependencies {
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.gms:google-services:4.3.14'
-    implementation 'com.google.firebase:firebase-database:20.0.6'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
-    implementation 'com.google.firebase:firebase-auth:21.0.8'
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1")
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'com.google.guava:guava:31.1-jre'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
