--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -28,9 +28,16 @@ android {
         sourceCompatibility "11"
         targetCompatibility "11"
     }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
     namespace 'com.example.finalproject'
     buildToolsVersion '33.0.0'
 }
+
+
 
 dependencies {
     implementation "androidx.datastore:datastore-preferences:1.1.0-dev01"
@@ -53,11 +60,14 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0'
     implementation 'com.kotlinx:kotlinx:1.0.2'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    testImplementation "org.mockito:mockito-core:2.23.0"
 }
 repositories {
     mavenCentral()
