--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -40,6 +40,8 @@ android {
 
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
     implementation "androidx.datastore:datastore-preferences:1.1.0-dev01"
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
